# regex-patterns

./: CHANGELOG.md  README.md  pyproject.toml  tox.ini
src/: regex_patterns.py  repatterns.py
tests/: test_regex_patterns.py  test_repatterns.py
